--- a/src/main/resources/setting.properties
+++ b/src/main/resources/setting.properties
@@ -1,1 +1,4 @@
 URL = http://api.openweathermap.org/data/2.5/weather?appid=eb51488aa1d3ecd0d9291fc5d4ef9fd1&lang=ua&units=metric
+dataSource.URL = jdbc:mysql://localhost:3306/weatherin?useSSL=false
+dataSource.User = bestuser
+dataSource.Password = bestuser
